--- a/src/main/resources/templates/admin/schedule.html
+++ b/src/main/resources/templates/admin/schedule.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="col-md-3">
                             <label class="form-label">Time Slot</label>
-                            <input type="datetime-local" class="form-control">
+                            <input type="datetime-local" class="form-control" placeholder="Select date and time">
                         </div>
                         <div class="col-md-2">
                             <button type="submit" class="btn btn-primary w-100">Assign</button>
