v1 project test (fix naming conflicts, jpa query methods, sessions getmapping, wrong migration file name, enum role conflicts, requestParam for /register in mainController)

--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -46,8 +46,9 @@
                             <div class="mb-3">
                                 <label class="form-label" for="role">I am a:</label>
                                 <select class="form-select" id="role" name="role">
-                                    <option value="RESEARCHER">Researcher (Submit Papers)</option>
-                                    <option value="ATTENDEE">Attendee (View Only)</option>
+                                    <option value="ADMIN">Administrator</option>
+                                    <option value="CHAIR">Chair</option>
+                                    <option value="PARTICIPANT" selected>Attendee</option>
                                     </select>
                             </div>
 
