--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto">
         
-        <li class="nav-item">
+        <li class="nav-item" sec:authorize="!isAuthenticated()">
             <a class="nav-link" href="/sessions">Browse Sessions</a>
         </li>
 
