--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -6,7 +6,7 @@
       <ul class="navbar-nav me-auto">
         
         <li class="nav-item" sec:authorize="!isAuthenticated()">
-            <a class="nav-link" href="/sessions">Browse Sessions</a>
+            <a class="nav-link" href="/session/list">Browse Sessions</a>
         </li>
 
         <li class="nav-item" sec:authorize="isAuthenticated()">
