half way to fully functional project

--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -13,7 +13,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown">Admin</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/admin/dashboard">Dashboard</a></li>
-                        <li><a class="dropdown-item" href="/admin/sessions/create">Create Session</a></li> <li><a class="dropdown-item" href="/admin/rooms">Manage Rooms</a></li>
+                        <li><a class="dropdown-item" href="/sessions/create">Create Session</a></li> <li><a class="dropdown-item" href="/admin/rooms">Manage Rooms</a></li>
                     </ul>
                 </li>
 
